fix: image rendering on firefox and opera browsers

--- a/web/styles/main.less
+++ b/web/styles/main.less
@@ -208,6 +208,13 @@ hr {
   border: none;
 }
 
+img {
+  image-rendering: optimizeQuality;
+  image-rendering: optimize-contrast; /* CSS3 Proposed */
+  image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
+  -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
+}
+
 html {
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
@@ -483,13 +490,6 @@ body > #error {
   padding-top: calc(3 / 2 * 100%);
 
   img {
-    image-rendering: optimizeSpeed;
-    image-rendering: optimize-contrast; /* CSS3 Proposed */
-    image-rendering: -o-crisp-edges; /* Opera */
-    image-rendering: -moz-crisp-edges; /* Firefox */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
-
     position: absolute;
     top: 0;
     left: 0;
@@ -704,15 +704,6 @@ header .pagination:not(:last-child) {
     width: 100%;
     height: 100%;
   }
-
-  img {
-    image-rendering: optimizeSpeed;
-    image-rendering: optimize-contrast; /* CSS3 Proposed */
-    image-rendering: -o-crisp-edges; /* Opera */
-    image-rendering: -moz-crisp-edges; /* Firefox */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
-  }
 }
 
 #archive .title {
@@ -812,13 +803,6 @@ header .pagination:not(:last-child) {
   }
 
   img {
-    image-rendering: optimizeSpeed;
-    image-rendering: optimize-contrast; /* CSS3 Proposed */
-    image-rendering: -o-crisp-edges; /* Opera */
-    image-rendering: -moz-crisp-edges; /* Firefox */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
-
     position: absolute;
     top: 0;
     left: 0;
@@ -895,15 +879,6 @@ header .pagination:not(:last-child) {
     width: 100%;
     min-height: 100%;
     margin: auto;
-  }
-
-  img {
-    image-rendering: optimizeSpeed;
-    image-rendering: optimize-contrast; /* CSS3 Proposed */
-    image-rendering: -o-crisp-edges; /* Opera */
-    image-rendering: -moz-crisp-edges; /* Firefox */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    -ms-interpolation-mode: nearest-neighbor; /* IE8+ */
   }
 }
 
